# charmos-site

./: .gitignore  AUTHORING.md  CLAUDE.md  build.sh  docmodel.py  generate.py  index_clang.py  make_cmdline.py  make_json.py  make_md.py  pyproject.toml  requirements.txt  sourceblock.py
.github/workflows/: site.yml
content/: index.mdx
content/blog/: consectetur-adipiscing.mdx  lorem-ipsum-dolor.mdx  tempor-incididunt.mdx
content/design/: index.mdx
content/guides/: index.mdx
content/reference/: index.mdx
site/: astro.config.mjs  docs_reference_index.mdx  package-lock.json  package.json
site/patches/: starlight-blog+0.25.0.patch  starlight-site-graph+0.5.0.patch
site/src/: content.config.ts
site/src/components/: SourceBlock.astro
site/src/styles/: global.css
templates/: cmdline.mdx
tests/: test_docmodel.py  test_docs_backlinks.py  test_index_clang.py  test_make_cmdline.py  test_make_json.py  test_make_md.py  test_make_md_sourceblock.py  test_sourceblock.py  test_sourceblock_render.py
tests/fixtures/: api.h  idea_bad.h  idea_good.h  idea_mismatch.h  idea_namemismatch.h  impl.c  types.h
